fix: configurable CORS patterns with railway host support